# patch.aul

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  credits.md  patch.aul.txt  patch.sln  readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ------.md  aviutl--------------.md  aviutl-----------.md  patch-aul------.md
.github/workflows/: CI.yml
patch/: .editorconfig  CMakeLists.txt  Debug.props  General.props  Release.props  add_dll_ref.hpp  clprogram.cl  config.hpp  config_rw.hpp  configfile.cpp  configfile.hpp  cryptostring.hpp  debug_log.hpp  gate.hpp  global.hpp  global_minimum.hpp  hash.cpp  hash.hpp  init.cpp  init.hpp  jsleep.hpp  macro.h  moduledata.hpp  multi_threading.hpp  mycl.hpp  mylua.hpp  mywindow.hpp  offset_address.hpp  overwrite_resource.cpp  overwrite_resource.hpp  packages.config  patch.cpp  patch.hpp  patch.rc  patch.vcxproj  patch.vcxproj.filters  patch_access_key.hpp  patch_add_extension.cpp  patch_add_extension.hpp  patch_alpha_bg.hpp  (+149 more)
